<resources>
    <string name="app_name">MyLoginApp</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign-Up</string>
    <string name="register">Sign Up</string>
    <string name="massage">Massage</string>
    <string name="social">Social</string>
    <string name="info">Info</string>
    <string name="market">Market</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="student_text">Student</string>
    <string name="teacher_text">Teacher</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_your_password">Forgot password</string>
</resources>